SSC-2242 fix textfield search css on mobile

--- a/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base/less/components/c-main-nav.less
+++ b/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base/less/components/c-main-nav.less
@@ -370,7 +370,7 @@
 */
     &__search{
         z-index: -1;
-        width: 300px;
+        width: 100px;
         position: absolute;
         top: 16px;
         right: -40px;
